<resources>
    <string name="app_name">AndroidFA23</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="org_name">ORG_NAME</string>
    <string name="org_desc">ORG DESC</string>
    <string name="organizations">ORGANIZATIONS</string>
    <string name="student">student</string>
    <string name="organization">Organization</string>
    <string name="create_your_profile">Create your profile!</string>
    <string name="name">Name</string>
    <string name="find_your_link">Find Your Link...</string>
    <string name="search_for_an_org_person_or_tag">Search for an org, person, or tag</string>
    <string name="browse_organizations">Browse Organizations</string>
    <string name="browse_people">Browse People</string>
    <string name="people">People</string>
    <string name="your_email">Your Email</string>
    <string name="your_password">Your Password</string>
    <string name="join">Join</string>
    <string name="i_already_have_an_account"><u>I already have an account...</u></string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have_account"><u>I don\'t have an account...</u></string>
    <string name="organization_bio">Organization Bio:</string>
    <string name="create_account">Create Account</string>
    <string name="received">Received</string>
    <string name="sent">Sent</string>
    <string name="awaiting_response">Awaiting Response</string>
    <string name="organization_name">Organization Name</string>
    <string name="brief_bio">Brief Bio:</string>
    <string name="hint1">Once you click finish, individual users can request to join your org and you can choose to confirm their request in your messages!</string>
    <string name="hint2">Just for others to get to know you a bit! Let us know where you’re from, your hobbies, and any other random facts :)</string>
    <string name="affiliations">Affiliations:</string>
    <string name="save_amp_continue"><![CDATA[Save & Continue]]></string>
    <string name="tell_us_about_your_org">Tell Us About Your Org</string>
    <string name="edit_profile_picture_or_background_image">Edit Profile Picture or Background Image</string>
    <string name="person_name">Person Name</string>
    <string name="fri">Fri:</string>
    <string name="involved_orgs">Involved Orgs:</string>
    <string name="repeating_weekly_availabilities">Repeating Weekly Availabilities:</string>
    <string name="mon">Mon:</string>
    <string name="studying_major_s_minor_s">Studying Major(s), Minor(s)</string>
    <string name="sun">Sun:</string>
    <string name="hint3">Just for others to get to know you a bit! Let us know where you’re from, your hobbies, and any other random facts :)</string>
    <string name="class_of_xxxx">Class of XXXX</string>
    <string name="sat">Sat:</string>
    <string name="wed">Wed:</string>
    <string name="full_name">Full Name:</string>
    <string name="customize_your_profile">Customize Your Profile</string>
    <string name="willing_to_coffee_chat">Willing to Coffee Chat?</string>
    <string name="you_ll_have_the_ability_to_edit_specific_day_availabilities_nonce_you_ve_created_your_account">You’ll have the ability to edit specific day availabilities\nonce you’ve created your account!</string>
    <string name="location_preferences">Location Preferences</string>
    <string name="hint4">This is a place where you can note which locations you prefer coffee chatting at! (EX: Duffield, Mac’s Cafe, Mann Library)</string>
    <string name="contact_information">Contact Information</string>
    <string name="hint5">This is an optional section. You may include as many or\nas little as you would like.</string>
    <string name="email">Email:</string>
    <string name="linkedin">LinkedIn:</string>
    <string name="facebook">Facebook:</string>
    <string name="instagram">Instagram:</string>
    <string name="i_m_done_adding_my_orgs"><u>I\'m done adding my orgs</u></string>
</resources>