<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Onboarding.CreateProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Onboarding.CreateProfileActivity">

        <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="122dp"
                android:layout_height="119dp"
                android:layout_marginTop="0dp"
                android:clickable="true"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/login_edit_text_border"
                android:backgroundTint="@color/beige"
                app:layout_constraintStart_toEndOf="@+id/cardView2"
                app:layout_constraintTop_toBottomOf="@+id/textView5" >
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/login_edit_text_border">
                    <ImageView
                        android:id="@+id/imageView9"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/picture_placeholder" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


            <ImageView
                android:id="@+id/backButton"
                android:layout_width="37dp"
                android:layout_height="32dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:clickable="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/backbutton" />


            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="131dp"
                android:layout_height="122dp"
                android:clickable="true"
                android:layout_marginStart="48dp"
                android:layout_marginTop="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/login_edit_text_border">

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/profile_placeholder" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/nameText"
            android:layout_width="236dp"
            android:layout_height="36dp"
            android:layout_marginStart="128dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_edit_text_border"
            android:hint="@string/organization_name"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/bioTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="72dp"
            android:text="@string/brief_bio"
            android:textColor="@color/brown"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameText" />

        <TextView
            android:id="@+id/bioTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="224dp"
            android:text="Members:"
            android:textColor="@color/brown"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameText" />

        <EditText
            android:id="@+id/bioText2"
            android:layout_width="336dp"
            android:layout_height="99dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/login_edit_text_border"
            android:hint="@string/hint1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bioTitle2" />

        <EditText
            android:id="@+id/bioText"
            android:layout_width="337dp"
            android:layout_height="101dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/login_edit_text_border"
            android:hint="@string/hint2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bioTitle" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="8dp"
            android:text="Org Name: "
            android:textColor="@color/brown"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/nameText" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="60dp"
            android:text="@string/affiliations"
            android:textColor="@color/brown"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/nameText" />

        <Button
            android:id="@+id/addAffiliationButton"
            android:layout_width="58dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/lightGreen"
            android:text="+"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/nameText" />

        <Button
            android:id="@+id/continueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:backgroundTint="@color/lightGreen"
            android:text="@string/save_amp_continue"
            android:textColor="@color/darkGreen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bioText2" />

        <TextView
                android:id="@+id/textView5"
                android:layout_width="330dp"
                android:layout_height="66dp"
                android:layout_marginTop="96dp"
                android:fontFamily="@font/robotobold"
                android:text="@string/tell_us_about_your_org"
                android:textAlignment="center"
                android:textColor="@color/brown"
                android:textSize="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.253"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="228dp"
            android:layout_height="291dp"
            android:layout_marginStart="160dp"
            android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            app:layout_constraintStart_toEndOf="@+id/backButton"
            app:srcCompat="@drawable/background_lines" />

        <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/roboto"
                android:text="@string/edit_profile_picture_or_background_image"
                android:textColor="@color/brown"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView3" />


        </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>